--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,11 @@
-.App {
-  width: 100%;
-  height: 100%;
-background-image: url(images/bg-body.png);
-}
 
-
-@media screen and (min-width: 800px) {
-  @supports (display: grid) {
     .App {
+        width: 100%;
+        height: 100%;
+        background-image: url(images/bg-body.png);
+
       display: grid;
-      grid-template-columns: 130px  repeat(12, 90px)130px;
+      grid-template-columns: 75px 35px repeat(12, 90px) 35px 75px;
       /*Отступ между коллонами*/
       grid-column-gap: 20px;
       /*Отступ между рядами*/
@@ -19,32 +15,32 @@ background-image: url(images/bg-body.png);
 
     .header {
       grid-column-start: 2;
-      grid-column-end: 14;
+      grid-column-end: 17;
       grid-row-start: 1;
       grid-row-end: 2;
     }
       .banner {
-          grid-column-start: 1;
-          grid-column-end: 14;
+          grid-column-start: 2;
+          grid-column-end: 12;
           grid-row-start: 2;
           grid-row-end: 5;
       }
 
     .question{
       grid-column-start: 3;
-      grid-column-end: 14;
+      grid-column-end: 17;
       grid-row-start: 7;
       grid-row-end: 16;
     }
     .services{
         grid-column-start: 3;
-        grid-column-end: 14;
+        grid-column-end: 17;
         grid-row-start: 15;
         grid-row-end: 22;
     }
     .portfolio{
-        grid-column-start: 2;
-        grid-column-end: 13;
+        grid-column-start: 3;
+        grid-column-end: 15;
         grid-row-start: 23;
         grid-row-end: 31;
     }
@@ -57,31 +53,41 @@ background-image: url(images/bg-body.png);
 
     .footer {
       grid-column-start: 1;
-      grid-column-end: 16;
+      grid-column-end: 14;
       grid-row-start: 35;
       grid-row-end: 40;
     }
 
-
     .animation{
-        grid-column-start: 1;
-        grid-column-end: 3;
-        grid-row-start: 41;
-        grid-row-end: 44;
+        grid-column-start: 2;
+        grid-column-end: 16;
+        grid-row-start: 56;
+        grid-row-end: 58;
     }
     .image_carousel{
-        grid-column-start: 1;
+        grid-column-start: 2;
         grid-column-end: 16;
-        grid-row-start: 46;
-        grid-row-end: 49;
+        grid-row-start: 59;
+        grid-row-end: 65;
     }
 
-  }
+
+
+.test{
+display: grid;
+    width: auto;
+    height: auto;
+    grid-column: 5/17;
+    grid-row: 41/50;
+
 }
 
-
-
-
+.react_test_component{
+    grid-column-start: 2;
+    grid-column-end: 16;
+    grid-row-start: 65;
+    grid-row-end: 70;
+}
 
 
 
