--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,53 @@
     grid-column-end: 16;
     grid-row-start: 70;
     grid-row-end: 72;
-
 }
+
+
+    .forum {
+        grid-column-start: 3;
+        grid-column-end: 16;
+        grid-row-start: 73;
+        grid-row-end: 75;
+        display: grid;
+        grid-template-rows: 400px;
+
+    }
+    .f1 {
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 1;
+        grid-row-end: 1;
+        justify-self: stretch;
+        align-self: stretch;
+        background-color: aqua;
+        border: 1px solid black;
+
+    }
+    .f1 li{
+        list-style-type: none;
+    }
+    .f2{
+        grid-column-start: 5;
+        grid-column-end: 10;
+        grid-row-start: 1;
+        grid-row-end: 1;
+        justify-self: center;
+        align-self: center;
+        background-color: aquamarine;
+    }
+    .f3{
+        grid-column-start: 10;
+        grid-column-end: 15;
+        grid-row-start: 1;
+        grid-row-end: 1;
+        justify-self: end;
+        align-self: end;
+background-color: bisque;
+
+    }
+
+
 
 
 
